objects/QIDC__Validation_Request_ims__c.object
<CustomObject>
    <description>Used to store the Validation Requests submitted to OneKey for updating existing records or creating new records.</description>
    <fields>
        <fullName>QIDC__Activity_ID_ims__c</fullName>
        <label>Activity ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Activity_SF_ID_ims__c</fullName>
        <description>To store the salesforce ID of the activity from VR screen</description>
        <label>Activity SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Address_ID_ims__c</fullName>
        <description>Used to store Onekey id of the Address.</description>
        <label>Address ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Address_Line_1_ims__c</fullName>
        <description>Address of the workplace.</description>
        <label>Address Line 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Address_SF_ID_ims__c</fullName>
        <description>To store the salesforce ID of the Address selected in custom VR screen</description>
        <label>Address SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Category_ims__c</fullName>
        <description>Category of the workplace (Business Account).</description>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__City_ims__c</fullName>
        <description>City of the workplace.</description>
        <label>City</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Client_Request_Id_ims__c</fullName>
        <description>Client request id of the validation request that is sent to OneKey.</description>
        <externalId>true</externalId>
        <label>Client Request Id</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>QIDC__Contact_ims__c</fullName>
        <description>Formula field to store the first name and last name of Individual. Used as name in activity monitoring screen.</description>
        <formula>QIDC__First_Name_ims__c + &quot; &quot; + QIDC__Last_Name_ims__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Country_ISO_Code_ims__c</fullName>
        <description>Country ISO Code passed by user to create VR</description>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>FR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__County_ims__c</fullName>
        <description>County Code of the address</description>
        <label>County</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Courtesy_Title_ims__c</fullName>
        <description>Courtesy Title of the individual in the workplace.</description>
        <inlineHelpText>Courtesy Title of the individual in the workplace.</inlineHelpText>
        <label>Courtesy Title</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>0</fullName>
                </value>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__CreatedBy_ims__c</fullName>
        <formula>CreatedBy.FirstName  + &apos; &apos; + CreatedBy.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__District_ims__c</fullName>
        <label>District</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__First_Name_ims__c</fullName>
        <description>First name of the Individual (Person Account).</description>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Further_Processing_Required_ims__c</fullName>
        <description>Helps to handle the Account address seperatly</description>
        <label>Further Processing Required</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Gender_ims__c</fullName>
        <description>Gender of the individual in the workplace.</description>
        <inlineHelpText>Gender of the individual in the workplace.</inlineHelpText>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>U</fullName>
                </value>
                <value>
                    <fullName>M</fullName>
                </value>
                <value>
                    <fullName>F</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Individual_Address_ID_ims__c</fullName>
        <description>To store the Onekey ID of the Individual Address</description>
        <label>Individual Address ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Individual_Address_SF_ID_ims__c</fullName>
        <description>To store the salesforce ID of the Individual Address</description>
        <label>Individual Address SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Individual_ID_ims__c</fullName>
        <description>Used to store Onekey id of the individual.</description>
        <label>Individual_ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Individual_SF_ID_ims__c</fullName>
        <description>To store the salesforce ID of the Individual selected in custom VR screen</description>
        <label>Individual SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Individual_Title_ims__c</fullName>
        <description>Used for storing Individual&apos;s Title</description>
        <label>Individual Title</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DR</fullName>
                </value>
                <value>
                    <fullName>11</fullName>
                </value>
                <value>
                    <fullName>20</fullName>
                </value>
                <value>
                    <fullName>21</fullName>
                </value>
                <value>
                    <fullName>22</fullName>
                </value>
                <value>
                    <fullName>05</fullName>
                </value>
                <value>
                    <fullName>03</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Individual_Type_ims__c</fullName>
        <description>Profession of the Individual (Person Account).</description>
        <label>Professional Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>MX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Individual_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account object for the Person Accounts</description>
        <label>Individual</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Validation Requests</relationshipLabel>
        <relationshipName>Validation_Requests_ims</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QIDC__Last_Name_ims__c</fullName>
        <description>Last name of the Individual (Person Account).</description>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Middle_Name_ims__c</fullName>
        <description>Middle name of the Individual (Person Account).</description>
        <label>Middle Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Name_ims__c</fullName>
        <description>Name of the workplace (Business Account).</description>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OKE_Integration_Date_ims__c</fullName>
        <description>OneKey Integration Date [trace4CegedimOkeIntegrationDate]</description>
        <label>OneKey Integration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__OneKey_Request_Eid_ims__c</fullName>
        <description>OneKey external id returned by OneKey for the validation request.</description>
        <label>OneKey Request Eid</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__OneKey_Response_Date_ims__c</fullName>
        <description>DBO Response Date [trace5CegedimDboResponseDate] in validation response</description>
        <label>OneKey Response Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Organization_Name_ims__c</fullName>
        <description>Used for mapping OneKey&apos;s workspace.parentUsualName to SalesForce&apos;s Validation Request object</description>
        <label>Organization Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Postal_Code_ims__c</fullName>
        <description>Postal code of the workplace.</description>
        <label>Postal Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Primary_Specialty_ims__c</fullName>
        <description>Primary specialty of the Individual (Person Account).</description>
        <label>Primary Specialty</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AM</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Record_Type_ims__c</fullName>
        <formula>RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Record Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Comments_ims__c</fullName>
        <description>Comments for the validation request.</description>
        <label>Request Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Date_ims__c</fullName>
        <description>Date on which the validation request was sent.</description>
        <label>Request Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Request_Type_ims__c</fullName>
        <description>Type of validation request (New/Update/Delete).</description>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Update</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Response_Change_Date_ims__c</fullName>
        <description>Accepted/Rejected date in OneKey of the validation request.</description>
        <label>Response Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>QIDC__Response_Status_Reason_ims__c</fullName>
        <description>Reject reason in case the validation request is rejected in OneKey.</description>
        <label>Response Status Reason</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Role_ims__c</fullName>
        <description>Role of the individual in the workplace.</description>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>D</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Specialty2_ims__c</fullName>
        <description>Specialty 2 of the individual.</description>
        <label>Specialty 2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IC</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Specialty3_ims__c</fullName>
        <description>Specialty 3 of the individual.</description>
        <label>Specialty 3</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IC</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Status_ims__c</fullName>
        <description>Status of the validation Request (Pending/Accepted/Rejected).</description>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Pending</fullName>
                    <default>true</default>
                    <label>Pending</label>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Telephone_No_ims__c</fullName>
        <description>Telephone number of the workplace</description>
        <label>Telephone No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Validated_Act_OneKeyID_ims__c</fullName>
        <description>OneKey ID of the validated affiliation sent in the approved validation request response.</description>
        <label>Validated Act OneKeyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Validated_Ind_OneKeyID_ims__c</fullName>
        <description>OneKey ID of the validated individual sent in the approved validation request response.</description>
        <label>Validated Ind OneKeyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Validated_Wkp_OneKeyID_ims__c</fullName>
        <description>OneKey ID of the validated workplace sent in the approved validation request response.</description>
        <label>Validated Wkp OneKeyID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Web_Service_Call_Status_ims__c</fullName>
        <defaultValue>true</defaultValue>
        <description>True if the validation request service call is Successful else False.</description>
        <label>Web Service Call Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Address_ID_ims__c</fullName>
        <description>To store the Onekey ID of the Workplace Address</description>
        <label>Workplace Address ID</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Address_SF_ID_ims__c</fullName>
        <description>To store the salesforce ID of the Workplace Address</description>
        <label>Workplace Address SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_ID_ims__c</fullName>
        <description>Used to store Onekey id of the workplace</description>
        <label>Workplace ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_SF_ID_ims__c</fullName>
        <description>To store the Salesforce ID of workplace record selected in custom VR screen</description>
        <label>Workplace SF ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_Type_ims__c</fullName>
        <label>Workplace Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>QIDC__Country_ISO_Code_ims__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>IC</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>QIDC__Workplace_ims__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Look up to Account object for the Person Accounts</description>
        <label>Workplace</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Validation Requests (Workplace)</relationshipLabel>
        <relationshipName>Validation_Requests1_ims</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Validation Request</label>
    <listViews>
        <fullName>QIDC__Activity_All_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Contact_ims__c</columns>
        <columns>QIDC__Role_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Activity</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activity-All</label>
    </listViews>
    <listViews>
        <fullName>QIDC__Activity_Approved_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Contact_ims__c</columns>
        <columns>QIDC__Role_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Activity</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activity-Approved</label>
    </listViews>
    <listViews>
        <fullName>QIDC__Activity_Pending_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Contact_ims__c</columns>
        <columns>QIDC__Role_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Activity</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activity-Pending</label>
    </listViews>
    <listViews>
        <fullName>QIDC__Activity_Rejected_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Contact_ims__c</columns>
        <columns>QIDC__Role_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Activity</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Activity-Rejected</label>
    </listViews>
    <listViews>
        <fullName>QIDC__All</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Contact_ims__c</columns>
        <columns>QIDC__Role_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>QIDC__WorkPlace_All_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Workplace</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Workplace-All</label>
    </listViews>
    <listViews>
        <fullName>QIDC__WorkPlace_Approved_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Approved</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Workplace</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Workplace-Approved</label>
    </listViews>
    <listViews>
        <fullName>QIDC__WorkPlace_Pending_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Pending</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Workplace</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Workplace-Pending</label>
    </listViews>
    <listViews>
        <fullName>QIDC__WorkPlace_Rejected_ims</fullName>
        <columns>NAME</columns>
        <columns>QIDC__Name_ims__c</columns>
        <columns>QIDC__Request_Type_ims__c</columns>
        <columns>QIDC__Status_ims__c</columns>
        <columns>QIDC__Response_Status_Reason_ims__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>QIDC__Status_ims__c</field>
            <operation>equals</operation>
            <value>Rejected</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>QIDC__Validation_Request_ims__c.QIDC__Workplace</value>
        </filters>
        <filters>
            <field>QIDC__Web_Service_Call_Status_ims__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Workplace-Rejected</label>
    </listViews>
    <nameField>
        <displayFormat>VR-{0000}</displayFormat>
        <label>Validation Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Validation Requests</pluralLabel>
    <recordTypes>
        <fullName>QIDC__Activity</fullName>
        <active>true</active>
        <description>Record type to differentiate Activities</description>
        <label>Activity</label>
    </recordTypes>
    <recordTypes>
        <fullName>QIDC__Workplace</fullName>
        <active>true</active>
        <description>Record type to differentiate Workplace</description>
        <label>Workplace</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>